Retirando vulnerabilidades e limpando o código segundo Qodana e suas métricas (só não teve alterações nas dependencias com cves)